--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@tngraphql/slugify",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Add slugs to tngraphql lucid models",
-  "main": "dist/lib/Sluglife.js",
-  "types": "./dist/lib/Sluglife.d.ts",
+  "main": "dist/lib/Sluggable.js",
+  "types": "./dist/lib/Sluggable.d.ts",
   "scripts": {
     "clean": "rimraf dist",
     "compile": "npm run clean && tsc -b",
